Completing scenario 1 API's
